# rust-challenge

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  generator.rs  lib.rs  main.rs
src/domain/entities/: transfer.rs  user_stats.rs
src/domain/repositories/: errors.rs  mod.rs  transfer_repo.rs
src/domain/services/: errors.rs  mod.rs  stats_service.rs
src/infrastructure/: app_setup.rs  generator.rs  mod.rs
src/infrastructure/clickhouse/: db_connection.rs  errors.rs  mod.rs
src/infrastructure/repositories/: mod.rs  transfer_repo.rs
src/jobs/: mod.rs  startup.rs
src/presentation/: mod.rs
src/presentation/handlers/: mod.rs  stats_handler.rs
src/presentation/shared/: app_state.rs  errors.rs
tests/: integration_test.rs
