[package]
name = "rust_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
clickhouse = "0.13.3"
actix-web = "4.11.0"
envy = "0.4.2"
dotenv = "0.15.0"
thiserror = "2.0.12"
mockall = "0.13.1"
serde_json = "1.0.140"
reqwest = "0.12.20"
futures = "0.3.31"
async-trait = "0.1.88"
env_logger = "0.11.8"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
